<resources>
    <string name="app_name">Beamote</string>
    <string name="connexion">Login</string>
    <string name="acceuil">Welcome!</string>
    <string name="inscription">Registration</string>
    <string name="mdp">Password</string>
    <string name="confirmmdp">Confirm your password</string>
    <string name="pseudo">Pseudo</string>
    <string name="check">Register your informations</string>
    <string name="nocompt"> You don\'t have an account. Register here. </string>
    <string name="alreadylog"> I have an account. </string>
    <string name="prblmpseudo_register"> Pseudo invalid </string>
    <string name="prblmpassword_register"> Password invalid </string>
    <string name="alarm_title">Alarms</string>
    <string name="modify_alarm_title">Modify alarm</string>
    <string name="modify">Modify</string>
    <string name="add">Add</string>
    <string name="alarm_time">Alarm time</string>
    <string name="music">Music</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Thuesday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="complete">Complete</string>
    <string name="login">Login</string>
    <string name="mes_beamy">My Beamys</string>
    <string name="projection">projection</string>
    <string name="r_veil">réveil</string>
    <string name="hub">Hub</string>
    <string name="add_alarm">Add alarm</string>
    <string name="recurring">Recurring</string>
    <string name="alarm_name">alarm name</string>
    <string name="play_random_button">play random button</string>
    <string name="search_for_music">Search for music</string>


</resources>
