<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/hub"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="spread" />


    <GridLayout
        android:id="@+id/Hub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Home">

        <ImageButton
            android:id="@+id/mesBeamy"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:layout_row="0"
            android:adjustViewBounds="true"
            android:contentDescription="@string/mes_beamy"
            android:scaleType="centerCrop"
            android:src="@drawable/mesbeamys" />

        <ImageButton
            android:id="@+id/music"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:layout_row="0"
            android:adjustViewBounds="true"
            android:contentDescription="@string/music"
            android:scaleType="centerCrop"
            android:src="@drawable/musique" />

        <ImageButton
            android:id="@+id/projection"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:layout_row="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/projection"
            android:scaleType="centerCrop"
            android:src="@drawable/proj" />

        <ImageButton
            android:id="@+id/réveil"
            style="@android:style/Widget.ImageButton"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:layout_row="1"
            android:contentDescription="@string/r_veil"
            android:scaleType="centerCrop"
            android:src="@drawable/reveil" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>